deploy/stage/sof-stage.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sof-stage
spec:
  selector:
    appStage: sof-stage
  ports:
    - port: 80
      name: sof-stage-http
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sof-stage
spec:
  selector:
    matchLabels:
      appStage: sof-stage
  replicas: 1
  template:
    metadata:
      labels:
        appStage: sof-stage
    spec:
      containers:
        - name: sof-stage
          image: "eu.gcr.io/villagecare/sof"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
