deploy/stage/ingress-stage.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
  name: sof-stage
spec:
  rules:
    - host: sof.stage.sandbox.villagecare.aidbox.io
      http:
        paths:
          - path: /
            backend:
              serviceName: sof-stage
              servicePort: 80

  tls:
    - hosts:
        - sof.stage.sandbox.villagecare.aidbox.io
      secretName: sof-stage-tls
